fixing text-align issue

--- a/resources/assets/sass/design.scss
+++ b/resources/assets/sass/design.scss
@@ -3604,3 +3604,33 @@ button:disabled {
     background-color: #3c3c3b;
     border-color: #3c3c3b;
 }
+.txt-lft {
+    text-align: left !important;
+}
+.m-l-10{
+    margin-left: 10px !important;
+}
+.m-l-15{
+    margin-left: 15px !important;
+}
+.m-l-20{
+    margin-left: 20px !important;
+}
+.m-l-30{
+    margin-left: 30px !important;
+}
+.p-l-10{
+    padding-left: 10px !important;
+}
+.p-l-20{
+    padding-left: 20px !important;
+}
+.p-l-25{
+    padding-left: 25px !important;
+}
+.p-l-30{
+    padding-left: 30px !important;
+}
+.p-l-40{
+    padding-left: 40px !important;
+}
